Simplify `DiseaseService` and `PhenotypicFeatureService`, introduce `OntologyHierarchyService`, the REST controllers mostly serve `IdentifiedConcept`s.
Signed-off-by: Daniel Danis <daniel.gordon.danis@protonmail.com>